--- a/src/app/main/pages/andon/settings/settings.component.html
+++ b/src/app/main/pages/andon/settings/settings.component.html
@@ -1,7 +1,7 @@
-<div class="container" [ngStyle]="containerStyle">
-    <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">settings</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Configuraciones</h1>               
+<div class="ms-container">
+    <div class="ms-toolbar">
+        <mat-icon class="ms-toolbar__icon">settings</mat-icon>
+        <h1 class="ms-toolbar__title">Configuraciones</h1>               
     </div>
 
     <div class="container-settings">
