--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -7,56 +7,62 @@
     margin-bottom: 10px;
 }
 
-.body-container{
+.body-container {
     text-align: center;
 }
 
-.report{
+.report {
     margin-top: 50px;
-    &__title{
+    background: white;
+    padding: 24px 24px;
+    border: 1px solid lightgrey;
+    border-radius: 10px 10px 10px 10px;
+    width: fit-content;
+    margin: 24px auto;
+
+    &__title {
         font-weight: bold;
         font-size: 2.5em;
         margin-bottom: 30px;
     }
-    &__form{
+    &__form {
         display: flex;
         flex-direction: column;
         align-items: center;
-        &--input{
+        &--input {
             width: 350px;
         }
-        &--img{
-            width: 300px; 
+        &--img {
+            width: 300px;
             height: 200px;
         }
-        &--card{
-            width: 400px; 
+        &--card {
+            width: 400px;
             height: 250px;
             background: #f1f1f1;
         }
-        
     }
 }
 
-.btn{
+.btn {
     margin-top: 30px;
-    border: 1px solid #6200EE;
+    border: 1px solid #6200ee;
     color: white;
-    background: #6200EE;
+    background: #6200ee;
     padding: 4px 40px 4px 40px;
 }
-.drop{
-    width: 300px; 
+.drop {
+    width: 300px;
     height: 200px;
 }
 
- /* 
+/* 
   ##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
   ##Resolucion = B/w 481px to 767px
 */
 
-@media (min-width: 481px) and (max-width: 767px) {  
-    .report{
+@media (min-width: 481px) and (max-width: 767px) {
+    .report {
         margin-top: 50px;
         padding: 24px 24px;
         border: 1px solid lightgrey;
@@ -65,17 +71,17 @@
         margin: 24px auto;
         box-shadow: 2px 2px 4px lightgrey;
 
-        &__title{
+        &__title {
             font-weight: bold;
             font-size: 2.5em;
             margin-bottom: 30px;
         }
-        &__form{
-            &--input{
+        &__form {
+            &--input {
                 width: 350px;
             }
-            &--img{
-                width: 300px; 
+            &--img {
+                width: 300px;
                 height: 200px;
             }
         }
@@ -85,43 +91,41 @@
         width: 400px;
         height: 300px;
     }
-    
-  }
-  
-  /* 
+}
+
+/* 
     ##Dispositivo = Mayoria de telefonos moviles (vertical)
     ##Resolucion = B/w 320px to 479px
   */
-  
-  @media (min-width: 320px) and (max-width: 480px) {    
-    .report{
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .report {
         margin-top: 50px;
         padding: 24px 24px;
-        border: 1px solid lightgrey;    
+        border: 1px solid lightgrey;
         border-radius: 10px 10px 10px 10px;
         width: fit-content;
         margin: 24px auto;
         box-shadow: 2px 2px 4px lightgrey;
-        &__title{
+        &__title {
             font-weight: bold;
             font-size: 2.5em;
             margin-bottom: 30px;
         }
-        &__form{
-            &--input{
+        &__form {
+            &--input {
                 width: 260px;
             }
-            &--img{
-                width: 250px; 
+            &--img {
+                width: 250px;
                 height: 150px;
             }
-            
         }
 
-        .btn{
+        .btn {
             margin-top: 30px;
-            background: #6200EE;
-            color:white;
+            background: #6200ee;
+            color: white;
             padding: 4px 40px 4px 40px;
             border: none;
         }
@@ -131,13 +135,4 @@
         width: 300px;
         height: 200px;
     }
-    
-    
-  }
-
-
-    
-    
-
- 
-
+}
