--- a/src/app/main/pages/andon/report/report.component.html
+++ b/src/app/main/pages/andon/report/report.component.html
@@ -1,14 +1,15 @@
-<div class="container" [ngStyle]="containerStyle">
-    <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">radio_button_checked</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Reportar
+<div class="ms-container">
+    <div class="ms-toolbar">
+        <mat-icon class="ms-toolbar__icon">radio_button_checked</mat-icon>
+        <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
+            Reportar
         </h1>
     </div>
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 
     <div class="body-container">
-        <div class="report" [ngStyle]="reportStyle">
+        <div class="report mat-elevation-z4">
             <form [formGroup]="reportForm" autocomplete="off" class="report__form">
                 <mat-form-field appearance="outline" id="result" class="report__form--input">
                     <mat-label>Nombre de bahia</mat-label>
@@ -39,7 +40,7 @@
                     <div class="placeholder-content">
                     </div>
                 </ng-template>
-                <button  mat-button type="submit" style="background: transparent;" class="btn">
+                <button mat-button type="submit" style="background: transparent;" class="btn">
                     <input type="checkbox" id="toggle">
                     <label for="toggle" id="boton" (click)="report()">
                     </label>
