--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -39,13 +39,14 @@
 
             &--mobile {
                 font-size: 1.6rem;
-                width: 79%;
+                width: 75%;
             }
         }
 
         &__button {
             border: 1px #6200ee solid;
             color: #6200ee;
+            background: white !important;
             padding: 5px 15px 5px 15px;
             height: 50px;
             align-self: center;
@@ -218,6 +219,7 @@
     font-size: 1rem !important;
     padding: 8px 24px !important;
     border: 1px solid #6200ee !important;
+    background: white !important;
     color: #6200ee !important;
 
     &--icon {
