--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="auth.user$ | async as user">
   <div class="ms-kanban-toolbar">
     <ng-container *ngIf="user.role == 'Administrador'">
-      <button type="file" mat-stroked-button class="ms-kanban-toolbar__button" (click)="openDialog('create')"
+      <!-- <button type="file" mat-stroked-button class="ms-kanban-toolbar__button" (click)="openDialog('create')"
         [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'">
         <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
         CREAR
-      </button>
+      </button> -->
       <button type="file" mat-stroked-button class="ms-kanban-toolbar__button" (click)="uploadFileDialog()"
         [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'">
         <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
