--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-create-dialog/requests-create-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-create-dialog/requests-create-dialog.component.html
@@ -60,7 +60,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Observaciones</mat-label>
-                    <input type="text" matInput placeholder="Observaciones" formControlName="obsrvations">
+                    <input type="text" matInput placeholder="Observaciones" formControlName="observations">
                 </mat-form-field>
 
             </div>
