--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.html
@@ -47,7 +47,7 @@
           <div>
             <mat-menu #requestsMenu="matMenu">
               <button mat-menu-item (click)="accCorrective(item)">
-                <mat-icon>add_task</mat-icon> Analisis
+                <mat-icon>fact_check</mat-icon> Analisis
               </button>
               <button mat-menu-item (click)="detailDialog(item, item.eventType)">
                 <mat-icon>visibility</mat-icon> Detalle
