--- a/src/app/main/pages/quality/analysis/records/dialogs/time-line-dialog/time-line-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/records/dialogs/time-line-dialog/time-line-dialog.component.html
@@ -13,8 +13,10 @@
 
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-    <mat-dialog-content style="display: flex; align-items: center;; justify-content: space-between;">
-        <div class="details">
+    <mat-dialog-content class="timer" >
+        
+        
+        <div class="timer__details">
             <p><span style="font-weight: bold;"> OT Actual :</span> {{data.workOrder ? data.workOrder : ''}}</p>
             <p><span style="font-weight: bold;"> Componente :</span> {{data.component ? data.component : ''}}</p>
             <p><span style="font-weight: bold;"> Número de paqueteo :</span> {{data.packageNumber ? data.packageNumber : ''}}</p>
@@ -23,8 +25,8 @@
             <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType ? data.eventType : ''}} </p>
         </div>
 
-        <div class="time-line">
-            <div class="time-line__registry">
+        <div class="timer__time-line">
+            <div class="timer__time-line--registry">
                 <div>
                     {{data.registryTimeElapsed?.days | number : '2.'}} /
                     {{data.registryTimeElapsed?.hours | number : '2.'}} :
@@ -33,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="time-line__attention">
+            <div class="timer__time-line--attention">
                 <div>
                     {{data.attentionTimeElapsed?.days | number : '2.'}} /
                     {{data.attentionTimeElapsed?.hours | number : '2.'}} :
@@ -41,7 +43,7 @@
                     {{data.attentionTimeElapsed?.seconds | number : '2.'}}
                 </div>
             </div>
-            <img src="../../../../../../../assets/img/timeline-s1.png" alt="" style="width: 100%; margin-top: 20px;">
+            <img src="../../../../../../../assets/img-quality/timeline-s1.png" alt="" style="width: 100%; margin-top: 20px;">
         </div>
 
 
