--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
@@ -72,6 +72,13 @@
         margin-right: 12px;
     }
 
+    .indicator {
+        margin-right: 8px;
+        color: grey;
+        border-bottom: dashed 1px;
+        align-self: center;
+    }
+
     .result-part {
         padding: 12px;
         border: solid 1px lightgray;
